# supervocab

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json.example  shell.nix
src/: card_checker.rs  card_getter.rs  constants.rs  key.rs  main.rs  markup_updater.rs  mode_selector.rs  normal_mode.rs  server_mode.rs  simple_card.rs  tag_updater.rs  users.rs  util.rs
