[package]
name = "super_vocab"
version = "0.1.0"
authours = "jotrorox"
edition = "2021"
description = "A unofficial spaced repetiton addon to supernotes"
readme = "https://github.com/Jotrorox/supervocab/blob/master/README.md"
repository = "https://github.com/Jotrorox/supervocab"
license-file = "LICENSE"


[dependencies]
chrono = "0.4.26"
reqwest = { version = "0.11.18", features = ["json"] }
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.28.2", features = ["full"] }
rpassword = "7.2.0"